Style input page

--- a/templates/input.html
+++ b/templates/input.html
@@ -14,42 +14,80 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../static/css/style.css" />
-    <title>PrivEngV2X</title>
+    <link
+      rel="stylesheet"
+      href="{{url_for('static', filename='css/style.css')}}"
+    />
+    <title>DeeptDCS</title>
   </head>
 
   <body>
     <nav class="navbar bg-dark">
       <h1>
-        <a href="index.html"><i class="fas fa-code"></i><b> PrivEngV2X</b> </a>
+        <a href="http://localhost:3000/"><i class="fas fa-code"></i><b> DeeptDCS</b> </a>
       </h1>
       <ul>
-        <li><a href="About.html">About</a></li>
-        <li><a href="tutorial.html">Tutorial</a></li>
-        <li><a href="input.html">Input Data</a></li>
-        <li><a href="main.html">Trajectory Results</a></li>
-        <li><a href="register.html">Register</a></li>
-        <li><a href="login.html">Login</a></li>
+        <li><a href="http://localhost:3000/home">HOME</a></li>
+        <li><a href="http://localhost:5000/input">INPUT DATA</a></li>
+        <li><a href="http://localhost:3000/introduction">INTRO</a></li>
       </ul>
     </nav>
-
-    <div class="landing-inner-input" style="margin-top: 80px">
-      <h1 class="x-large">PrivEngV2X</h1>
-      <p class="lead">
-        Please upload your raw and sanitized trajectory data below:
-      </p>
-      <!-- <div>
-        After submitting, please give us about one minute to process your data
-      </div> -->
-      <!-- <div class="buttons">
-        <a href="main.html" class="btn btn-primary">Raw</a>
-        <a href="login.html" class="btn btn-light">Login</a>
-      </div> -->
-      <form method="POST" action="" enctype="multipart/form-data">
-        <p><input type="file" name="matlab" /></p>
-        <p><input type="file" name="text" /></p>
-        <p><input type="submit" value="Submit" /></p>
-      </form>
+    <div class="landing-inner-input" style="margin-top: 100px">
+      <h1 style = "color: #17a2b8">Data Upload</h1>
     </div>
+    <div style=>
+      <p style = "margin-top: 10px; text-align: center; font-weight: bold; font-size: large;">
+        Please upload the conductivity map in form of a .mat file,
+        and positions of points of electrodes in form of a .txt file.
+      </p>
+      <hr style="color: #17a2b8"/>
+      <br />
+      <br />
+      <div
+        style="
+          display: flex;
+          flex-direction: column;
+          height: 100;
+          width: 1000;
+          justify-content: space-between;
+          margin-left: 50px;
+        "
+      >
+      <form method="POST" action="" enctype="multipart/form-data">
+        <!-- <p><input type="file" name="matlab" /></p>
+        <p><input type="file" name="text" /></p>
+        <p><input type="submit" value="Submit" /></p> -->
+          <div style=" width: 250; display: flex; flex-direction: row; margin-bottom: 20px; ">
+            <div style ="font-weight: bold; font-size:19px;">Choose Matlab File: </div>
+            <div style = "margin-left: 10px;"><input type="file" name="matlab" /></div>   
+          </div>
+        <div style=" width: 250; display: flex; flex-direction: row; margin-bottom: 20px; ">
+            <div style ="font-weight: bold; font-size:19px;">Choose Text File: </div>
+            <div style = "margin-left: 10px;"><input type="file" name="text" /></div>   
+          </div>
+      </div>
+      <p style="margin-left: 50px; font-size: 18px;">
+        <i>
+          *You should choose files with the correct format accordingly. Only
+          MATLAB and Text files (.mat, .txt) are allowed. Please see 
+          <a
+            target='_blank'
+            href='https://drive.google.com/uc?export=download&id=1xZ521buu8jHiim-JvT_umxzoLyeI9Nbo'
+          >
+            example files
+          </a>
+          .
+        </i>
+      </p>
+      <div style = "margin-left: 60px; margin-top: 20px">
+          <input type="submit" value="Submit" />
+      </div>
+
+      </form>
+        
+      
+    </div>
+
+    
   </body>
 </html>
